@@ -1,3 +1,7 @@
+2006-03-01 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * tools/jmnedict2dictd.rb: Added JMnedict to dictd converter.
+
 2006-02-28 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * tools/dictfmt.rb: This class will be used instead of the dictfmt
